CSS/style.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap");


/* Header */
header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px;
    width: 100%;
    z-index: 2;
    margin-bottom: -180px;
}


.intro {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-size: 15px;
    font-weight: bold;
    color: white;
}

.intro p {
    max-width: 65%;
    margin-top: 20px;
    color: white;
}


.title {
    color: white;
    font-size: xxx-large;
    padding: 25px;
    background-color: #081623;
    text-align: center;
}


/----------Navigation----------/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-family: "Montserrat", serif;
}

.navbar {
    overflow: hidden;
    font-family: Arial, serif;
    margin-right: 100px;
}

.navbar a {
    float: left;
    font-size: 16px;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

.dropdown {
    float: left;
    overflow: hidden;
}

.dropdown .dropbtn {
    border: none;
    outline: none;
    color: white;
    padding: 14px 16px;
    background-color: inherit;
    font-family: inherit;
    margin: 0;
    font-size: 2em;
}



.navbar a:hover, .dropdown:hover .dropbtn {
    background-color: #333;
}


.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
    z-index: 1;
    left: 100%;
    margin-left: -195px;
}



.dropdown-content a {
    float: none;
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    text-align: left;
}


.dropdown-content a:hover {
    background-color: #ddd;
}


.dropdown:hover .dropdown-content {
    display: block;
}

.dropdown-content2 {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
    z-index: 1;
}

@media screen and (max-width: 768px) {
    * {
        margin: 0;
        padding: 0;
        box-sizing: border-box;
    }


    html {
        font-family: "Montserrat", serif;
    }

    header {
        margin-bottom: 0;
    }

    .navbar2 {
        width: 100%;
        overflow: hidden;
        font-family: Arial, serif;
        margin-right: 100px;
    }


    .navbar2 a {
        float: none;
        font-size: 16px;
        color: white;
        text-align: center;
        padding: 14px 16px;
        text-decoration: none;
    }


    .dropdown2 {
        width: 100%;
        float: left;
        overflow: hidden;
    }



    .navbar2 a:hover, .dropdown2:hover .dropdown .dropbtn {
        background-color: #333;
    }


    .dropdown-content2 {
        display: none;
        position: relative;
        background-color: #f9f9f9;
        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
        z-index: 1;
    }


    .dropdown-content2 a {
        float: none;
        color: black;
        padding: 12px 16px;
        text-decoration: none;
        display: block;
        text-align: left;
    }


    .dropdown-content2 a:hover {
        background-color: #ddd;
    }

    .dropdown:hover .dropdown-content {
        display: none;
    }
}


/----------Karten----------/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-family: "Montserrat", serif;
}

.card-container {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    margin-top: 25px;
}

.card {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 325px;
    background-color: #f0f0f0;
    border-radius: 8px;
    overflow: hidden;
    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
    margin: 20px;
}

.card img {
    width: 100%;
    height: auto;
}

.card-content {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 16px;
    height: 100%;
}

.card-content h3 {
    font-size: 28px;
    margin-bottom: 8px;
    color: #666;

}

.card-content p {
    color: #666;
    font-size: 15px;
    line-height: 1.3;
    flex-grow: 1;
}

.card-content .btn {
    display: inline-block;
    padding: 8px 16px;
    background-color: steelblue;
    text-decoration: none;
    border-radius: 4px;
    margin-top: 16px;
    color: white;
}

/----------Bilderkarussell----------/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-family: "Montserrat", serif;
}

.slider-wrapper {
    position: relative;
    max-width: 65%;
    margin: 0 auto;
    padding: 100px;
}

.slider {
    display: flex;
    aspect-ratio: 16 / 9;
    overflow-x: auto;
    scroll-snap-type: x mandatory;
    scroll-behavior: smooth;
    box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
    border-radius: 0.5rem;
    -ms-overflow-style: none;
    scrollbar-width: none;
}

/* Hide scrollbar for Chrome, Safari and Opera */
.slider::-webkit-scrollbar {
    display: none;
}

.slider img {
    flex: 1 0 100%;
    scroll-snap-align: start;
    object-fit: cover;
}

.slider-nav {
    display: flex;
    column-gap: 1rem;
    position: absolute;
    bottom: 1.25rem;
    left: 50%;
    transform: translateX(-50%);
    z-index: 1;
}

.slider-nav a {
    width: 0.5rem;
    height: 0.5rem;
    border-radius: 50%;
    background-color: #fff;
    opacity: 0.75;
    transition: opacity ease 250ms;
}

.slider-nav a:hover {
    opacity: 1;
}

/* Entfernung des Karoussels bei kleinere Bildschirm */
@media  only screen and (max-width: 1266px) {
    .slider-wrapper {
        display: none;
    }
}


/----------Timeline----------/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-family: "Montserrat", serif;
}
/* ... */

